[package]
name = "sausagewiki"
version = "0.1.0-dev"
description = "A wiki engine"
authors = ["Magnus Hoff <maghoff@gmail.com>"]
license = "GPL-3.0"

[profile.release]
panic = "abort"

[dev-dependencies]
indoc = "0.2"
matches = "0.1"

[dependencies]
bart = "0.1.4"
bart_derive = "0.1.4"
chrono = "0.4"
clap = "2.31"
diff = "0.1"
futures = "0.1"
futures-cpupool = "0.1"
hyper = "0.11"
lazy_static = "0.2"
maplit = "1"
percent-encoding = "1.0"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
regex = "0.2"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
slug = "0.1"
titlecase = "0.10"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

[dependencies.libsqlite3-sys]
features = ["bundled"]
version = "0.9.1"

[dependencies.diesel]
default-features = false
features = ["sqlite", "chrono"]
version = "1.3.0"

[dependencies.diesel_migrations]
default-features = false
features = ["sqlite"]
version = "1.3.0"

[dependencies.diesel_infer_schema]
default-features = false
features = ["sqlite"]
version = "1.3.0"

[dependencies.num]
default-features = false
version = "0.1"

[dependencies.pulldown-cmark]
git = "https://github.com/maghoff/pulldown-cmark.git"
default-features = false

[dependencies.codegen]
path = "libs/codegen"

[build-dependencies]
quote = "0.3.10"
walkdir = "1"

[build-dependencies.diesel]
default-features = false
features = ["sqlite", "chrono"]
version = "1.3.0"

[build-dependencies.diesel_migrations]
default-features = false
features = ["sqlite"]
version = "1.3.0"

[workspace]
